--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
